<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/chatTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Chat Title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_chat_icon_text" />
</LinearLayout>
