<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Community -->
    <item
        android:id="@+id/community_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_community"
        android:title="@string/community_menu_item" />
    <!-- Friends -->
    <item
        android:id="@+id/friends_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends_menu_item" />
    <!-- Draw -->
    <item
        android:id="@+id/draw_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_draw_path"
        android:title="@string/draw_menu_item" />
    <!-- History -->
    <item
        android:id="@+id/history_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history_menu_item" />
    <!-- Chat -->
    <item
        android:id="@+id/chat_menu_item"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat" />
</menu>